[package]
name = "GGS"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
libp2p = { version = "0.51", features = [
    "tcp",
    "tokio",
    "gossipsub",
    "mdns",
    "dns",
    "noise",
    "plaintext",
    "yamux",
    "websocket",
    "macros",
    "mplex",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
anyhow = "1.0"
ndarray = "0.15"
ndarray-npy = "0.8"
quinn = { version = "0.10", features = ["runtime-tokio", "rustls"] }
k256 = { version = "0.13", features = ["ecdsa"] }
ed25519-dalek = "1"
sha3 = "0.10"
hex = "0.4"
bs58 = "0.4"
async-trait = "0.1"
thiserror = "1.0"
parking_lot = "0.12"
rcgen = "0.12"
futures = "0.3"
rustls = "0.21"



